--- a/uf3final/index.html
+++ b/uf3final/index.html
@@ -106,6 +106,69 @@
     <!--Servicios-->
 
     <!-- Precios -->
+    <section class="my-5" id="precios">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-center display-4 fw-bold lh-1 my-5">Precios</h2>
+                </div>
+                <div class="col">
+                    <div class="card mb-4 rounded-3 shadow-sm border-primary">
+                        <div class="card-header text-bg-primary py-3">
+                            <h4 class="my-0 fw-normal">Bronze</h4>
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title pricing-card-title">10€<small
+                                    class="text-body-secondary fw-light">/test</small></h3>
+                            <ul class="list-unstyled mt-3 mb-4">
+                                <li>4,50/10 asegurado</li>
+                                <li>Ideal para poder hacer media</li>
+                                <li>Contacto con el alumno via email</li>
+                                <li>Acceso a nuestro Help Center</li>
+                            </ul>
+                            <button type="button" class="w-100 btn btn-lg btn-outline-primary">Seleccionar</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card mb-4 rounded-3 shadow-sm border-primary">
+                        <div class="card-header text-bg-primary py-3">
+                            <h4 class="my-0 fw-normal">Silver</h4>
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title pricing-card-title">15€<small
+                                    class="text-body-secondary fw-light">/test</small></h3>
+                            <ul class="list-unstyled mt-3 mb-4">
+                                <li>5/10 asegurado</li>
+                                <li>Ideal para aprobar cualquier examen</li>
+                                <li>Contacto con el alumno via email</li>
+                                <li>Acceso a nuestro Help Center</li>
+                            </ul>
+                            <button type="button" class="w-100 btn btn-lg btn-outline-primary">Seleccionar</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card mb-4 rounded-3 shadow-sm border-primary">
+                        <div class="card-header text-bg-primary py-3">
+                            <h4 class="my-0 fw-normal">Gold</h4>
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title pricing-card-title">10€<small
+                                    class="text-body-secondary fw-light">/test</small></h3>
+                            <ul class="list-unstyled mt-3 mb-4">
+                                <li>7/10 asegurado</li>
+                                <li>Ideal para subir media</li>
+                                <li>Contacto con el alumno via email</li>
+                                <li>Acceso a nuestro Help Center</li>
+                            </ul>
+                            <button type="button" class="w-100 btn btn-lg btn-outline-primary">Seleccionar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Precios -->
 
     <!-- Sobre nosotros + Gallery -->
@@ -150,69 +213,70 @@
     <!-- Contact -->
     <section class="my-5" id="contact">
         <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
-                    <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate
-                        to contact us
-                        directly. Our team will come back to you within
-                        a matter of hours to help you.</p>
-                </div>
-
-                <div class="col-md-9 mb-md-0 mb-5">
-                    <form id="contact-form" name="contact-form" action="mail.php" method="POST">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="md-form mb-0">
-                                    <input type="text" id="name" name="name" class="form-control">
-                                    <label for="name" class="">Your name</label>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="md-form mb-0">
-                                    <input type="text" id="email" name="email" class="form-control">
-                                    <label for="email" class="">Your email</label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="md-form mb-0">
-                                    <input type="text" id="subject" name="subject" class="form-control">
-                                    <label for="subject" class="">Subject</label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="md-form">
-                                    <textarea type="text" id="message" name="message" rows="2"
-                                        class="form-control md-textarea"></textarea>
-                                    <label for="message">Your message</label>
-                                </div>
-
-                            </div>
-                        </div>
-                    </form>
-                    <div class="text-center text-md-left">
-                        <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
+            <section class="my-5" id="servicios">
+                <div class="row">
+                    <div class="col-12 my-5">
+                        <h2 class="text-center display-4 fw-bold lh-1 my-5">Contacto</h2>
+                        <p class="text-center lead my-5">Do you have any questions? Please do not hesitate
+                            to contact us
+                            directly. Our team will come back to you within
+                            a matter of hours to help you.</p>
                     </div>
-                    <div class="status"></div>
+
+                    <div class="offset-md-1 col-md-6 mb-md-0 mb-5">
+                        <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+                            <div class="row">
+                                <div class="col-md-6 my-3">
+                                    <div class="md-form mb-0">
+                                        <label for="name" class="">Your name</label>
+                                        <input type="text" id="name" name="name" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="col-md-6 my-3">
+                                    <div class="md-form mb-0">
+                                        <label for="email" class="">Your email</label>
+                                        <input type="text" id="email" name="email" class="form-control">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12 my-3">
+                                    <div class="md-form mb-0">
+                                        <label for="subject" class="">Subject</label>
+                                        <input type="text" id="subject" name="subject" class="form-control">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12 my-3">
+                                    <div class="md-form">
+                                        <label for="message">Your message</label>
+                                        <textarea type="text" id="message" name="message" rows="2"
+                                            class="form-control md-textarea"></textarea>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </form>
+                        <div class="text-center text-md-left my-5">
+                            <a class="btn btn-primary w-100">Send</a>
+                        </div>
+                        <div class="status"></div>
+                    </div>
+                    <div class="offset-md-1 col-md-2 text-center">
+                        <ul class="list-unstyled mb-0">
+                            <li><i class="fas fa-map-marker-alt fa-2x"></i>
+                                <p>San Francisco, CA 94126, USA</p>
+                            </li>
+                            <li><i class="fas fa-phone mt-4 fa-2x"></i>
+                                <p>+ 01 234 567 89</p>
+                            </li>
+                            <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+                                <p>contact@mdbootstrap.com</p>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="col-md-3 text-center">
-                    <ul class="list-unstyled mb-0">
-                        <li><i class="fas fa-map-marker-alt fa-2x"></i>
-                            <p>San Francisco, CA 94126, USA</p>
-                        </li>
-                        <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                            <p>+ 01 234 567 89</p>
-                        </li>
-                        <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                            <p>contact@mdbootstrap.com</p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
         </div>
     </section>
     <!-- Contact -->
