--- a/examSolver/index.html
+++ b/examSolver/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg bg-primary fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="img/logo.png" alt="logo" height="50px" width="50px">
+                <img src="img/logo.png" alt="" height="50px" width="50px">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -34,10 +34,10 @@
                         <a class="nav-link text-light" aria-current="page" href="#precio">Precio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="#sobreNosotros">Sobre nosotros</a>
+                        <a class="nav-link text-light mx-0 px-0" href="#sobreNosotros">Sobre nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="#contacto">Contacto</a>
+                        <a class="nav-link text-light mx-0 px-0" href="#contacto">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -50,11 +50,11 @@
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                 <div class="col-10 col-sm-8 col-lg-6">
-                    <img src="img/cerdo.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
+                    <img src="img/cerdo.png" class="d-block mx-lg-auto img-fluid" alt="" width="700"
                         height="500" loading="lazy">
                 </div>
                 <div class="col-lg-6">
-                    <h1 class="display-3 fw-bold lh-1 mb-3">¡Te hacemos tu examen!</h1>
+                    <p class="display-3 fw-bold lh-1 mb-3">¡Te hacemos tu examen!</p>
                     <p class="lead">Tenemos a los mejores alumnos de cada asignatura disponibles. Precios asequibles y
                         negociables con los alumnos estrella. ¡Usa nuestros servicios y no suspendas un examen nunca
                         mas! </p>
@@ -69,7 +69,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="text-center display-4 fw-bold lh-1 mb-5">Nuestros Servicios</h2>
+                    <h2 class="text-center display-4 fw-bold lh-1 mb-5 text-light">Nuestros Servicios</h2>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 my-3">
                     <div class="rounded border shadow p-5">
@@ -113,7 +113,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="text-center display-4 fw-bold lh-1 my-5">Precio</h2>
+                    <h2 class="text-center display-4 fw-bold lh-1 my-5 text-light">Precio</h2>
                 </div>
                 <div class="col">
                     <div class="card mb-4 rounded-3 shadow-sm border-primary">
@@ -230,7 +230,7 @@
                         <div class="row">
                             <div class="col-md-6 my-3">
                                 <div class="md-form mb-0">
-                                    <label for="name" class="">Your name</label>
+                                    <!-- <label for="name" class="">Your name</label> -->
                                     <input type="text" id="name" name="name" class="form-control">
                                 </div>
                             </div>
