--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                 <li>Ideal para subir media</li>
                                 <li>Contacto con el alumno via email</li>
                                 <li>Acceso a nuestro Help Center</li>
-                                <li>Haga clic en el botón de abajo</li>
+                                Haga clic en el botón de abajo
                             </ul>
                             <button type="button" class="w-100 btn btn-lg btn-outline-primary">Seleccionar</button>
                         </div>
@@ -223,7 +223,7 @@
                     <p class="text-center lead my-5">Do you have any questions? Please do not hesitate
                         to contact us
                         directly. Our team will come back to you within
-                        a matter of hours to help you.</p>
+                        a matter of hours to help you.
                 </div>
 
                 <div class="offset-md-1 col-md-6 mb-md-0 mb-5">
